<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    android:clickable="true"
    android:contextClickable="true">

    <ImageView
        android:id="@+id/business_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/business_picture"
        android:foregroundGravity="fill_horizontal|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|center_horizontal|fill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic[18]" />

    <TextView
        android:id="@+id/business_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="clip_horizontal|center|clip_vertical|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
        android:padding="@dimen/padding_small"
        android:text="@string/business_name_string"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/business_distance"
        app:layout_constraintStart_toEndOf="@+id/business_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/business_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1.7 km" />

    <RatingBar
        android:id="@+id/rating_stars"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/star_rating"
        android:numStars="5"
        android:rating="4.5"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@+id/business_name"
        app:layout_constraintTop_toBottomOf="@+id/business_name" />

    <TextView
        android:id="@+id/num_reviews_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_tiny"

        android:text="@string/num_reviews_string"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/rating_stars"
        app:layout_constraintStart_toEndOf="@+id/rating_stars" />

    <TextView
        android:id="@+id/business_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_dollar_amount"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business_distance" />

    <TextView
        android:id="@+id/business_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="clip_horizontal|center|clip_vertical|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
        android:padding="@dimen/padding_small"
        android:text="@string/business_address"
        app:layout_constraintStart_toStartOf="@+id/business_name"
        app:layout_constraintTop_toBottomOf="@+id/rating_stars" />

    <TextView
        android:id="@+id/business_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business_category_string"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/business_name"
        app:layout_constraintTop_toBottomOf="@+id/business_address" />
</androidx.constraintlayout.widget.ConstraintLayout>

