<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Data to make available to the XML via data binding. In this case,
         the whole ViewModel, so that we can access the LiveData,
         click handlers, and state variables. -->
    <data>
        <variable
            name="resultDetailViewModel"
            type="com.example.halp.resultDetail.ResultDetailViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/result_detail_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".resultDetail.ResultDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/business_picture"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_margin="@dimen/margin_medium"
                android:contentDescription="@string/business_picture"
                android:foregroundGravity="fill_horizontal|center_vertical|clip_horizontal|center|fill_vertical|clip_vertical|center_horizontal|fill"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic[4]" />

            <TextView
                android:id="@+id/business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_marginTop="8dp"
                android:gravity="clip_horizontal|center|clip_vertical|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
                android:padding="@dimen/padding_med_large"
                android:text="@string/business_name_string"
                android:textSize="@dimen/text_bold_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_picture" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/business_picture"
                app:layout_constraintTop_toBottomOf="@+id/business_name" />

            <TextView
                android:id="@+id/num_reviews_text"
                android:layout_width="124dp"
                android:layout_height="46dp"
                android:gravity="clip_horizontal|center|clip_vertical|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
                android:padding="@dimen/padding_small"
                android:text="@string/num_reviews_string"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintStart_toEndOf="@+id/ratingBar"
                app:layout_constraintTop_toBottomOf="@+id/business_name" />

            <TextView
                android:id="@+id/business_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:padding="@dimen/padding_medium"
                android:text="@string/dollars_and_types_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/business_picture"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/open_hours_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:gravity="clip_horizontal|center|clip_vertical|center_horizontal|fill|fill_horizontal|center_vertical|fill_vertical"
                android:padding="@dimen/padding_small"
                android:text="@string/open_hours_info_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/business_picture"
                app:layout_constraintTop_toBottomOf="@+id/business_address" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="270dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_picture" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>